# RP2040_TempSensor_FreeRTOS

./: README.md
task2_freeRTOS/: CMakeLists.txt
task2_freeRTOS/src/: main.c
